cluster/apps/homepage/service.yaml
#Domum/cluster/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
